"""
Main bazel MODULE file
"""

module(name = "audio-visualizer", version = "0.0.1")

# Python rules
bazel_dep(name = "rules_python", version = "0.27.1")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

python.toolchain(
    is_default = True,
    python_version = "3.10",
)
use_repo(python, "python_3_10", "python_versions")

pip.parse(
    name = "pip",
    python_version = "3.10",
    requirements_lock = "//requirements.txt",
)

use_repo(pip, "pip")
